# CSCE-II-Final-Project

./: .gitignore  CMakeLists.txt  SuperMarioRefined.pro  block.cpp  block.h  coin.cpp  coin.h  coinscounter.cpp  coinscounter.h  coinsdisplay.cpp  coinsdisplay.h  enemy.cpp  enemy.h  game.cpp  game.h  healthpotion.cpp  healthpotion.h  level.cpp  level.h  life.cpp  life.h  lifedisplay.cpp  lifedisplay.h  livesdisplay.cpp  livesdisplay.h  main.cpp  player.cpp  player.h  playerAction.cpp  playerAction.h  resources.qrc  score.cpp  score.h  settingsmanager.cpp  settingsmanager.h  shieldeffect.cpp  shieldeffect.h  sound.cpp  sound.h  soundplayer.cpp  (+11 more)
